SpeedLoop_Senorless2810HFINS/LKS32MC074DO_Motor_cz50/build/LKS32MC074DO_Motor/unify_builder.log
[2026-05-07 10:34:55]	compilation failed at : "d:\LKS\project\SpeedLoop_Senorless2810HFINS\LKS32MC074DO_Motor_cz50\lks32mc07x_periph_driver\Source\lks32mc07x_uart.c", exit code: 1
command: 
  "D:\keil\ARM\ARMCLANG\bin\armclang.exe" --target=arm-arm-none-eabi -c -xc -std=c99 -I. -Ilks32mc07x_periph_driver/Include -IHardware/Include -IUser/Include -IMATLAB -ISEGGER_RTT -I.cmsis/include -IRTE/_LKS32MC074DO_Motor -I.pack/Linko/LKS07x.1.1.8/Device/Include -I../../../../keil/ARM/ARMCLANG/include -D"LKS32MC074DOF8Q8" -mcpu=cortex-m0 -mlittle-endian -O3 -ffunction-sections -funsigned-char -fshort-enums -fshort-wchar -fno-rtti -Wno-packed -Wno-missing-variable-declarations -Wno-missing-prototypes -Wno-missing-noreturn -Wno-sign-conversion -Wno-nonportable-include-path -Wno-reserved-id-macro -Wno-unused-macros -Wno-documentation-unknown-command -Wno-documentation -Wno-license-management -Wno-parentheses-equality -g -o ./build/LKS32MC074DO_Motor/.obj/lks32mc07x_periph_driver/Source/lks32mc07x_uart.o -MMD ./lks32mc07x_periph_driver/Source/lks32mc07x_uart.c
   at unify_builder.Program.compileByMulThread(Int32 thrNum, CmdInfo[] cmds_, List`1 errLogs)
   at unify_builder.Program.Main(String[] args_)
---
./lks32mc07x_periph_driver/Source/lks32mc07x_sys.c:347:9: error: call to undeclared function '__nop'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  347 |         __nop();
      |         ^
1 error generated.
./lks32mc07x_periph_driver/Source/lks32mc07x_wake.c:49:9: error: call to undeclared function '__nop'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   49 |         __nop();
      |         ^
1 error generated.
./lks32mc07x_periph_driver/Source/lks32mc07x_uart.c:292:13: error: call to undeclared function '__nop'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  292 |             __nop();
      |             ^
./lks32mc07x_periph_driver/Source/lks32mc07x_uart.c:333:13: error: call to undeclared function '__nop'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  333 |             __nop();
      |             ^
2 errors generated.

[2026-05-07 10:35:17]	compilation failed at : "d:\LKS\project\SpeedLoop_Senorless2810HFINS\LKS32MC074DO_Motor_cz50\lks32mc07x_periph_driver\Source\lks32mc07x_uart.c", exit code: 1
command: 
  "D:\keil\ARM\ARMCLANG\bin\armclang.exe" --target=arm-arm-none-eabi -c -xc -std=c99 -I. -Ilks32mc07x_periph_driver/Include -IHardware/Include -IUser/Include -IMATLAB -ISEGGER_RTT -I.cmsis/include -IRTE/_LKS32MC074DO_Motor -I.pack/Linko/LKS07x.1.1.8/Device/Include -I../../../../keil/ARM/ARMCLANG/include -D"LKS32MC074DOF8Q8" -mcpu=cortex-m0 -mlittle-endian -O3 -ffunction-sections -funsigned-char -fshort-enums -fshort-wchar -fno-rtti -Wno-packed -Wno-missing-variable-declarations -Wno-missing-prototypes -Wno-missing-noreturn -Wno-sign-conversion -Wno-nonportable-include-path -Wno-reserved-id-macro -Wno-unused-macros -Wno-documentation-unknown-command -Wno-documentation -Wno-license-management -Wno-parentheses-equality -g -o ./build/LKS32MC074DO_Motor/.obj/lks32mc07x_periph_driver/Source/lks32mc07x_uart.o -MMD ./lks32mc07x_periph_driver/Source/lks32mc07x_uart.c
   at unify_builder.Program.compileByMulThread(Int32 thrNum, CmdInfo[] cmds_, List`1 errLogs)
   at unify_builder.Program.Main(String[] args_)
---
./lks32mc07x_periph_driver/Source/lks32mc07x_wake.c:49:9: error: call to undeclared function '__nop'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   49 |         __nop();
      |         ^
1 error generated.
./lks32mc07x_periph_driver/Source/lks32mc07x_uart.c:292:13: error: call to undeclared function '__nop'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  292 |             __nop();
      |             ^
./lks32mc07x_periph_driver/Source/lks32mc07x_uart.c:333:13: error: call to undeclared function '__nop'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  333 |             __nop();
      |             ^
2 errors generated.

[2026-05-07 10:35:47]	[info] incremental build: 2 source files changed
These source files will be recompiled
---
'd:\LKS\project\SpeedLoop_Senorless2810HFINS\LKS32MC074DO_Motor_cz50\lks32mc07x_periph_driver\Source\lks32mc07x_uart.c': object (.o) file not exist
'd:\LKS\project\SpeedLoop_Senorless2810HFINS\LKS32MC074DO_Motor_cz50\lks32mc07x_periph_driver\Source\lks32mc07x_wake.c': object (.o) file not exist

[2026-05-07 10:35:48]	[done]
	build successfully !

[2026-05-07 10:41:11]	[done]
	build successfully !

[2026-05-07 10:41:18]	[done]
	build successfully !

[2026-05-07 10:41:53]	[done]
	build successfully !

[2026-05-07 10:45:24]	[info] incremental build: 3 source files changed
These source files will be recompiled
---
'd:\LKS\project\SpeedLoop_Senorless2810HFINS\LKS32MC074DO_Motor_cz50\lks32mc07x_periph_driver\Source\lks32mc07x_sys.c': source file has been changed.
'd:\LKS\project\SpeedLoop_Senorless2810HFINS\LKS32MC074DO_Motor_cz50\lks32mc07x_periph_driver\Source\lks32mc07x_uart.c': source file has been changed.
'd:\LKS\project\SpeedLoop_Senorless2810HFINS\LKS32MC074DO_Motor_cz50\lks32mc07x_periph_driver\Source\lks32mc07x_wake.c': source file has been changed.

[2026-05-07 10:45:25]	compilation failed at : "d:\LKS\project\SpeedLoop_Senorless2810HFINS\LKS32MC074DO_Motor_cz50\lks32mc07x_periph_driver\Source\lks32mc07x_sys.c", exit code: 1
command: 
  "D:\keil\ARM\ARMCLANG\bin\armclang.exe" --target=arm-arm-none-eabi -c -xc -std=c99 -I. -Ilks32mc07x_periph_driver/Include -IHardware/Include -IUser/Include -IMATLAB -ISEGGER_RTT -I.cmsis/include -IRTE/_LKS32MC074DO_Motor -I.pack/Linko/LKS07x.1.1.8/Device/Include -I../../../../keil/ARM/ARMCLANG/include -D"LKS32MC074DOF8Q8" -mcpu=cortex-m0 -mlittle-endian -O3 -ffunction-sections -funsigned-char -fshort-enums -fshort-wchar -fno-rtti -Wno-packed -Wno-missing-variable-declarations -Wno-missing-prototypes -Wno-missing-noreturn -Wno-sign-conversion -Wno-nonportable-include-path -Wno-reserved-id-macro -Wno-unused-macros -Wno-documentation-unknown-command -Wno-documentation -Wno-license-management -Wno-parentheses-equality -g -o ./build/LKS32MC074DO_Motor/.obj/lks32mc07x_periph_driver/Source/lks32mc07x_sys.o -MMD ./lks32mc07x_periph_driver/Source/lks32mc07x_sys.c
   at unify_builder.Program.Main(String[] args_)
---
./lks32mc07x_periph_driver/Source/lks32mc07x_sys.c:347:9: error: call to undeclared function '__nop'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  347 |         __nop();
      |         ^
1 error generated.

[2026-05-07 10:49:03]	[info] incremental build: 3 source files changed
These source files will be recompiled
---
'd:\LKS\project\SpeedLoop_Senorless2810HFINS\LKS32MC074DO_Motor_cz50\lks32mc07x_periph_driver\Source\lks32mc07x_sys.c': object (.o) file not exist
'd:\LKS\project\SpeedLoop_Senorless2810HFINS\LKS32MC074DO_Motor_cz50\lks32mc07x_periph_driver\Source\lks32mc07x_uart.c': source file has been changed.
'd:\LKS\project\SpeedLoop_Senorless2810HFINS\LKS32MC074DO_Motor_cz50\lks32mc07x_periph_driver\Source\lks32mc07x_wake.c': source file has been changed.

[2026-05-07 10:49:04]	[done]
	build successfully !

